--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,8 +1,13 @@
 <%- include('partials/header') -%>
+
     <h1>
-        <%= postTitle %>
+        <%= title %>
     </h1>
+
+
     <p>
-        <%= postBody %>
+        <%= content%>
     </p>
+
+
     <%- include('partials/footer') -%>
